# -

./: CMakeLists.txt  Main.qml  README.md  main.cpp  textfilehandler.cpp  textfilehandler.h
